# camera_be

./: CMakeLists.txt  camera_be.cfg
src/: Backend.cpp  Backend.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CameraHandler.cpp  CameraHandler.hpp  CameraManager.cpp  CameraManager.hpp  CommandHandler.cpp  CommandHandler.hpp  Config.cpp  Config.hpp  FrontendBuffer.cpp  FrontendBuffer.hpp  MediaController.cpp  MediaController.hpp  V4L2ToXen.cpp  V4L2ToXen.hpp  main.cpp
